--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "client install": "npm install --prefix client",
     "client": "npm start --prefix client",
     "start": "node server.js",
-    "backend": "nodemon server.js",
+    "backend": "nodemon server.js --ignore client",
     "dev": "concurrently \"npm run backend\" \"cd.. && cd client && npm run start\""
   },
   "keywords": [],
