--- a/client/package.json
+++ b/client/package.json
@@ -27,8 +27,7 @@
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.3",
-    "web-vitals": "^1.0.1",
-    "webfontloader": "^1.6.28"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
