--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,6 @@
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.7",
     "@mui/styles": "^5.2.3",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.21.4",
     "dotenv": "^10.0.0",
@@ -22,8 +20,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.3.3",
-    "web-vitals": "^1.0.1"
+    "styled-components": "^5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
